Even more rebranding

--- a/src/i18n/strings/de.json
+++ b/src/i18n/strings/de.json
@@ -19,7 +19,7 @@
     "Hide Others": "Andere verstecken",
     "Hide": "Verstecken",
     "About": "Über",
-    "Element Help": "Hilfe zu Element",
+    "Element Help": "Hilfe zu KB-Chat",
     "Help": "Hilfe",
     "Close": "Schließen",
     "Minimize": "Minimieren",
@@ -41,7 +41,7 @@
     "Edit": "Bearbeiten",
     "Quit": "Beenden",
     "Show/Hide": "Anzeigen/Ausblenden",
-    "Close Element": "Element schließen",
+    "Close Element": "KB-Chat schließen",
     "Cancel": "Abbrechen",
     "Copy image address": "Bild-Adresse kopieren"
 }
