--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1,6 +1,6 @@
 {
     "Cancel": "Cancel",
-    "Close Element": "Close Element",
+    "Close Element": "Close KB-Chat",
     "Are you sure you want to quit?": "Are you sure you want to quit?",
     "Show/Hide": "Show/Hide",
     "Quit": "Quit",
@@ -24,7 +24,7 @@
     "Minimize": "Minimize",
     "Close": "Close",
     "Help": "Help",
-    "Element Help": "Element Help",
+    "Element Help": "KB-Chat Help",
     "About": "About",
     "Services": "Services",
     "Hide": "Hide",
