--- a/src/i18n/strings/en_US.json
+++ b/src/i18n/strings/en_US.json
@@ -18,7 +18,7 @@
     "Hide": "Hide",
     "Services": "Services",
     "About": "About",
-    "Element Help": "Element Help",
+    "Element Help": "KB-Chat Help",
     "Help": "Help",
     "Minimize": "Minimize",
     "Window": "Window",
@@ -41,6 +41,6 @@
     "Quit": "Quit",
     "Show/Hide": "Show/Hide",
     "Are you sure you want to quit?": "Are you sure you want to quit?",
-    "Close Element": "Close Element",
+    "Close Element": "Close KB-Chat",
     "Cancel": "Cancel"
 }
