--- a/src/i18n/strings/es.json
+++ b/src/i18n/strings/es.json
@@ -17,7 +17,7 @@
     "Hide": "Ocultar",
     "Services": "Servicios",
     "About": "Acerca de",
-    "Element Help": "Ayuda de Element",
+    "Element Help": "Ayuda de KB-Chat",
     "Help": "Ayuda",
     "Close": "Cerrar",
     "Minimize": "Minimizar",
@@ -41,7 +41,7 @@
     "Quit": "Salir",
     "Show/Hide": "Ver/Ocultar",
     "Are you sure you want to quit?": "¿Quieres salir?",
-    "Close Element": "Cerrar Element",
+    "Close Element": "Cerrar KB-Chat",
     "Cancel": "Cancelar",
     "Copy image address": "Copiar dirección de la imagen"
 }
